# para-cli

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  lib.rs  main.rs
tests/: cli.rs
